--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,75 @@ ul li a{
     padding-top: 7px;
     margin-right: 5px;
 }
+
+/* banner section styles */
+.banner-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    height: 70vh;
+}
+.banner-content{
+    width: 50%;
+    padding: 150px;
+    background-image: url(./images/Group\ 14.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#banner-subtitle{
+    color: #0B0223;
+    font-size: 42px;
+    font-weight: 600;
+    text-transform: uppercase;
+    
+}
+#banner-title{
+    font-size: 95px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 0px;
+}
+.banner-details{
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: lowercase;
+}
+.banner-image-container{
+    width: 50%;
+}
+
+.banner-image{
+    width: 80%;
+}
+.button-primary{
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;    
+    padding: 18px 40px;
+    gap: 10px;
+    border-radius: 40px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    border: none;
+    margin-right: 10px;
+}
+.button-secondary{
+    color: #FFF;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;    
+    padding: 18px 40px;
+    gap: 10px;
+    border-radius: 40px;
+    background: #4EC5F7;
+    border: none;
+    margin-right: 10px; 
+}
+
+/* online games section styles */
