--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ ul li a{
 }
 
 /* online games section styles */
-.games-header{
+.games-header, .instantly-title{
     color: #0B0223;
     text-align: center;
     font-size: 48px;
@@ -151,14 +151,12 @@ ul li a{
     font-size: 48px;
     font-weight: 700;
 }
-.games-details{
+.games-details, .instantly-details{
     color: #534C64;
     text-align: center;
-    font-family: Work Sans;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
-    line-height: 30px; /* 166.667% */
+
 }
 .games-category{
     display: flex;
@@ -183,11 +181,39 @@ ul li a{
 }
 
 /* play online games instantly scetion styles */
+.games-instantly-container{
+    margin: 60px auto;
+    display: flex;
+    justify-content: center;
+    background-color: FFF;
+    height: 90vh;
+    width: 1150px;
+}
 .instantly-title{
     direction: rtl;
     text-align: start;
+    margin: 200px 140px 0px 0px;
 }
 .instantly-details{
     direction: rtl;
     text-align: start;
+    margin-right: 140px;
 }
+#fighter-image{
+    width: 100%;
+}
+.games-anytime{
+    width: 50%;
+}
+#image-over{
+    margin: 0px;
+    position: relative;
+    bottom: 260px;
+    right: 100px;
+}
+#angela-img{
+    height: 50%;
+    width: 50%;
+}
+
+/* button section start */
