--- a/styles.css
+++ b/styles.css
@@ -216,4 +216,39 @@ ul li a{
     width: 50%;
 }
 
-/* button section start */
+/* button section styles */
+.button-container{
+    margin: 50px;
+}
+.button-first-line{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+.button-second-line{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    border-radius: 40px;
+    padding: 8px 5px;
+    border: none;
+    background-color: FFF;
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
+}
+.button:hover{
+    cursor: grab;
+    color: #FF42A5;
+    border: 2px solid #F948B2;
+}
+.button>img{
+    width: 20%;
+    margin-right: 8px;
+}
